# llama-gui

./: .gitignore  README.md  pyinstaller.spec  pyproject.toml
docs/superpowers/plans/: 2026-06-14-llama-gui.md  2026-06-19-typography-refresh.md  2026-06-19-ui-workbench-optimization.md
docs/superpowers/specs/: 2026-06-14-llama-gui-design.md  2026-06-19-typography-refresh-design.md  2026-06-19-ui-workbench-optimization-design.md
src/llama_app/: __main__.py
src/llama_app/core/: command.py  config.py  monitor.py  presets.py  process.py  speedtest.py  validators.py
src/llama_app/ui/: main_window.py  theme.py
src/llama_app/ui/tabs/: __init__.py  advanced_tab.py  model_tab.py  monitor_tab.py  network_tab.py  performance_tab.py  presets_tab.py  sampling_tab.py
src/llama_app/ui/widgets/: command_bar.py  config_page.py  log_panel.py  navigation_rail.py  path_picker.py  resource_plot.py  status_indicator.py
tests/: conftest.py  test_command.py  test_command_bar.py  test_config.py  test_config_page.py  test_log_panel.py  test_main_window.py  test_monitor.py  test_navigation_rail.py  test_path_picker.py  test_presets.py  test_process.py  test_speedtest.py  test_status_indicator.py  test_validators.py
