[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-gui"
version = "0.1.0"
description = "A Windows GUI launcher for llama-server"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
    "pyqtgraph>=0.13",
    "psutil>=5.9",
    "pynvml>=11.5",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-qt>=4.2",
]

[project.scripts]
llama-gui = "llama_app.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require real llama-server or GPU (deselect with '-m \"not integration\"')",
]
